add http request/response log

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,15 @@
 server.port=8787
 spring.application.name=dubbo-quickstart
+server.tomcat.accesslog.buffered=true
+server.tomcat.accesslog.directory=logs
+server.tomcat.accesslog.enabled=false
+server.tomcat.accesslog.file-date-format=.yyyy-MM-dd
+server.tomcat.accesslog.pattern=common
+server.tomcat.accesslog.prefix=access_log
+server.tomcat.accesslog.rename-on-rotate=false
+server.tomcat.accesslog.request-attributes-enabled=false
+server.tomcat.accesslog.rotate=true
+server.tomcat.accesslog.suffix=.log
 server.tomcat.mbeanregistry.enabled=true
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
@@ -33,12 +43,12 @@ dubbo.protocol.name=dubbo
 dubbo.protocol.port=12345
 dubbo.registry.address=N/A
 # Enables Dubbo All Endpoints
-management.endpoint.dubbo.enabled = true
-management.endpoint.dubboshutdown.enabled = true
-management.endpoint.dubboconfigs.enabled = true
-management.endpoint.dubboservices.enabled = true
-management.endpoint.dubboreferences.enabled = true
-management.endpoint.dubboproperties.enabled = true
+management.endpoint.dubbo.enabled=true
+management.endpoint.dubboshutdown.enabled=true
+management.endpoint.dubboconfigs.enabled=true
+management.endpoint.dubboservices.enabled=true
+management.endpoint.dubboreferences.enabled=true
+management.endpoint.dubboproperties.enabled=true
 # log config
 logging.level.root=info
 logging.level.com.rookiefly.open.urlshortener.mapper=TRACE
