--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,10 +38,12 @@ spring.cache.caffeine.spec=maximumSize=500,expireAfterAccess=600s
 mybatis.config-location=classpath:mybatis-config.xml
 # Dubbo config
 dubbo.scan.base-packages=com.rookiefly.quickstart.dubbo.facade.impl
-## dubbo.application.name=${spring.application.name}
+dubbo.application.name=${spring.application.name}
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=12345
-dubbo.registry.address=N/A
+#dubbo.registry.address=N/A
+#dubbo.registry.address=zookeeper://127.0.0.1:2181?backup=127.0.0.1:2182,127.0.0.1:2183
+dubbo.registry.address=zookeeper://127.0.0.1:2181
 # Enables Dubbo All Endpoints
 management.endpoint.dubbo.enabled=true
 management.endpoint.dubboshutdown.enabled=true
