--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,7 +32,7 @@ spring.datasource.password=
 spring.cache.cache-names=dictCache
 spring.cache.caffeine.spec=maximumSize=500,expireAfterAccess=600s
 # mybatis config
-#mybatis.type-aliases-package=com.rookiefly.quickstart.dubbo.model
+#mybatis.type-aliases-package=com.rookiefly.quickstart.dubbo.dao
 #mybatis.configuration.default-fetch-size=100
 #mybatis.configuration.default-statement-timeout=30
 mybatis.config-location=classpath:mybatis-config.xml
