--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,13 +37,18 @@ spring.cache.caffeine.spec=maximumSize=500,expireAfterAccess=600s
 #mybatis.configuration.default-statement-timeout=30
 mybatis.config-location=classpath:mybatis-config.xml
 # Dubbo config
-dubbo.scan.base-packages=com.rookiefly.quickstart.dubbo.facade.impl
+dubbo.scan.base-packages=com.rookiefly.quickstart.dubbo.remote.impl
 dubbo.application.name=${spring.application.name}
-dubbo.protocol.name=dubbo
-dubbo.protocol.port=12345
 #dubbo.registry.address=N/A
 #dubbo.registry.address=zookeeper://127.0.0.1:2181?backup=127.0.0.1:2182,127.0.0.1:2183
-dubbo.registry.address=zookeeper://127.0.0.1:2181
+#dubbo.registry.address=zookeeper://127.0.0.1:2181
+#dubbo.metadata-report.address=zookeeper://127.0.0.1:2181
+#dubbo.protocol.name=dubbo
+#dubbo.protocol.port=20880
+#dubbo.application.qosEnable=true
+#dubbo.application.qosPort=33333
+#dubbo.application.qosAcceptForeignIp=false
+dubbo.config-center.address=zookeeper://127.0.0.1:2181
 # Enables Dubbo All Endpoints
 management.endpoint.dubbo.enabled=true
 management.endpoint.dubboshutdown.enabled=true
