--- a/pom.xml
+++ b/pom.xml
@@ -218,7 +218,7 @@
                 <version>1.2.2</version>
                 <configuration>
                     <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
-                    <dockerDirectory>src/main/docker</dockerDirectory>
+                    <dockerDirectory>${project.basedir}/docker</dockerDirectory>
                     <resources>
                         <resource>
                             <targetPath>/</targetPath>
