fix docker error

--- a/dubbo-admin/docker-compose.yml
+++ b/dubbo-admin/docker-compose.yml
@@ -53,6 +53,21 @@ services:
       - zoo2
       - zoo3
 
+  dubbo-quickstart:
+    image: rookiefly/dubbo-quickstart:latest
+    container_name: dubbo-quickstart
+    ports:
+      - 8787:8787
+    networks:
+      - dubbo-net
+    environment:
+      - dubbo.config-center.address=zookeeper://zoo1:2181?backup=zoo2:2181,zoo3:2181
+      - jasypt.encryptor.password=123456
+    depends_on:
+      - zoo1
+      - zoo2
+      - zoo3
+
 networks:
   dubbo-net:
     name: dubbo-net
