add mybatis pagination

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,6 +36,7 @@ spring.cache.caffeine.spec=maximumSize=500,expireAfterAccess=600s
 #mybatis.configuration.default-fetch-size=100
 #mybatis.configuration.default-statement-timeout=30
 mybatis.config-location=classpath:mybatis-config.xml
+pagehelper.default-count=false
 # Dubbo config
 dubbo.scan.base-packages=com.rookiefly.quickstart.dubbo.remote.impl
 dubbo.application.name=${spring.application.name}
