--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,6 @@
 FROM openjdk:8-jdk-alpine
-ENV JAVA_OPT="-Djava.security.egd=file:/dev/./urandom"
+ENV JAVA_OPTS=""
 VOLUME /tmp
 ADD dubbo-quickstart-1.0.0-SNAPSHOT.jar /app.jar
-ENTRYPOINT ["java", "${JAVA_OPT}", "-jar","/app.jar"]
+ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app.jar"]
+EXPOSE 8787
