--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.5"
 
 services:
-  zoo1:
+  zk1:
     image: zookeeper
     restart: always
     container_name: zk1
@@ -9,11 +9,11 @@ services:
       - 2181:2181
     environment:
       ZOO_MY_ID: 1
-      ZOO_SERVERS: server.1=zoo1:2888:3888;2181 server.2=zoo2:2888:3888;2181 server.3=zoo3:2888:3888;2181
+      ZOO_SERVERS: server.1=zk1:2888:3888;2181 server.2=zk2:2888:3888;2181 server.3=zk3:2888:3888;2181
     networks:
       - dubbo-net
 
-  zoo2:
+  zk2:
     image: zookeeper
     restart: always
     container_name: zk2
@@ -21,11 +21,11 @@ services:
       - 2182:2181
     environment:
       ZOO_MY_ID: 2
-      ZOO_SERVERS: server.1=zoo1:2888:3888;2181 server.2=zoo2:2888:3888;2181 server.3=zoo3:2888:3888;2181
+      ZOO_SERVERS: server.1=zk1:2888:3888;2181 server.2=zk2:2888:3888;2181 server.3=zk3:2888:3888;2181
     networks:
       - dubbo-net
 
-  zoo3:
+  zk3:
     image: zookeeper
     restart: always
     container_name: zk3
@@ -33,29 +33,29 @@ services:
       - 2183:2181
     environment:
       ZOO_MY_ID: 3
-      ZOO_SERVERS: server.1=zoo1:2888:3888;2181 server.2=zoo2:2888:3888;2181 server.3=zoo3:2888:3888;2181
+      ZOO_SERVERS: server.1=zk1:2888:3888;2181 server.2=zk2:2888:3888;2181 server.3=zk3:2888:3888;2181
     networks:
       - dubbo-net
 
   dubbo-admin:
-    image: apache/dubbo-admin:latest
-    container_name: dubbo
+    image: rooiefly/dubbo-admin:latest
+    container_name: dubbo-admin
     ports:
       - 8089:8080
     networks:
       - dubbo-net
     environment:
-      #- admin.registry.address=zookeeper://zoo1:2181?backup=zoo2:2181,zoo3:2181
-      - admin.config-center=zookeeper://zoo1:2181?backup=zoo2:2181,zoo3:2181
-      #- admin.metadata-report.address=zookeeper://zoo1:2181?backup=zoo2:2181,zoo3:2181
+      - admin.registry.address=zookeeper://zk1:2181?backup=zk2:2181,zk3:2181
+      #- admin.config-center=zookeeper://zk1:2181?backup=zk2:2181,zk3:2181
+      - admin.metadata-report.address=zookeeper://zk1:2181?backup=zk2:2181,zk3:2181
     depends_on:
-      - zoo1
-      - zoo2
-      - zoo3
+      - zk1
+      - zk2
+      - zk3
 
   sentinel-dashboard:
     image: rookiefly/sentinel-dashboard:latest
-    container_name: sentinel
+    container_name: sentinel-dashboard
     ports:
       - 8280:8280
     networks:
@@ -69,14 +69,17 @@ services:
     networks:
       - dubbo-net
     environment:
-      - dubbo.config-center.address=zookeeper://zoo1:2181?backup=zoo2:2181,zoo3:2181
+      - dubbo.registry.address=zookeeper://zk1:2181?backup=zk2:2181,zk3:2181
+      #- dubbo.config-center.address=zookeeper://zk1:2181?backup=zk2:2181,zk3:2181
+      - dubbo.metadata-report.address=zookeeper://zk1:2181?backup=zk2:2181,zk3:2181
       - jasypt.encryptor.password=123456
-      - csp.sentinel.dashboard.server=sentinel:8280
+      - csp.sentinel.dashboard.server=sentinel-dashboard:8280
       - project.name=sentinel-dubbo-quickstart
     depends_on:
-      - zoo1
-      - zoo2
-      - zoo3
+      - zk1
+      - zk2
+      - zk3
+      - dubbo-admin
       - sentinel-dashboard
 
 networks:
