--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.5"
 services:
   zk1:
     image: zookeeper
-    restart: always
+    #restart: always
     container_name: zk1
     ports:
       - 2181:2181
@@ -15,7 +15,7 @@ services:
 
   zk2:
     image: zookeeper
-    restart: always
+    #restart: always
     container_name: zk2
     ports:
       - 2182:2181
@@ -27,7 +27,7 @@ services:
 
   zk3:
     image: zookeeper
-    restart: always
+    #restart: always
     container_name: zk3
     ports:
       - 2183:2181
