add sms code demo

--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -37,6 +37,49 @@ services:
     networks:
       - dubbo-net
 
+  rmqnamesrv:
+    image: foxiswho/rocketmq:4.7.0
+    container_name: rmqnamesrv
+    ports:
+      - 9876:9876
+#    volumes:
+#      - ./rmqs/logs:/opt/logs
+#      - ./rmqs/store:/opt/store
+    environment:
+      JAVA_OPT_EXT: "-Duser.home=/opt -Xms512M -Xmx512M -Xmn128m"
+    command: [ "sh","mqnamesrv" ]
+    networks:
+      - dubbo-net
+
+  rmqbroker:
+    image: foxiswho/rocketmq:4.7.0
+    container_name: rmqbroker
+    ports:
+      - 10909:10909
+      - 10911:10911
+    volumes:
+#      - ./rmq/logs:/opt/logs
+#      - ./rmq/store:/opt/store
+      - ./rmq/brokerconf/broker.conf:/etc/rocketmq/broker.conf
+    environment:
+      JAVA_OPT_EXT: "-Duser.home=/opt -Xms512M -Xmx512M -Xmn128m"
+    command: [ "sh","mqbroker","-c","/etc/rocketmq/broker.conf","-n","rmqnamesrv:9876","autoCreateTopicEnable=true" ]
+    depends_on:
+      - rmqnamesrv
+    networks:
+      - dubbo-net
+
+  rmqconsole:
+    image: styletang/rocketmq-console-ng
+    container_name: rmqconsole
+    ports:
+      - 8180:8080
+    environment:
+      JAVA_OPTS: "-Drocketmq.namesrv.addr=rmqnamesrv:9876 -Dcom.rocketmq.sendMessageWithVIPChannel=false"
+    depends_on:
+      - rmqnamesrv
+    networks:
+      - dubbo-net
   dubbo-admin:
     image: rookiefly/dubbo-admin:latest
     container_name: dubbo-admin
