--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -74,6 +74,7 @@ swagger.show=true
 #rocketmq config
 rocketmq.name-server=127.0.0.1:9876
 rocketmq.producer.group=dubbo-quickstart-group
+com.rocketmq.sendMessageWithVIPChannel=true
 rocketmq.sms.topic=sms-topic
 # redis config
 # Redis数据库索引（默认为0）
