--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -37,14 +37,42 @@ services:
     networks:
       - dubbo-net
 
+  mysqldb:
+    image: mysql:5.7
+    container_name: mysql
+    volumes:
+      - ./mysql-data:/var/lib/mysql
+      - ./mysql-init-files:/docker-entrypoint-initdb.d
+    #restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: dictdb
+      MYSQL_USER: rookiefly
+      MYSQL_PASSWORD: rookiefly
+    ports:
+      - "3306:3306"
+    networks:
+      - dubbo-net
+
+  redis:
+    image: redis:latest
+    container_name: redis
+    volumes:
+      - ./redis-data:/data
+    ports:
+      - "6379:6379"
+    #restart: always
+    networks:
+      - dubbo-net
+
   rmqnamesrv:
     image: foxiswho/rocketmq:4.7.0
     container_name: rmqnamesrv
     ports:
       - 9876:9876
-#    volumes:
-#      - ./rmqs/logs:/opt/logs
-#      - ./rmqs/store:/opt/store
+    volumes:
+      - ./rmqs/logs:/opt/logs
+      - ./rmqs/store:/opt/store
     environment:
       JAVA_OPT_EXT: "-Duser.home=/opt -Xms512M -Xmx512M -Xmn128m"
     command: [ "sh","mqnamesrv" ]
@@ -58,8 +86,8 @@ services:
       - 10909:10909
       - 10911:10911
     volumes:
-#      - ./rmq/logs:/opt/logs
-#      - ./rmq/store:/opt/store
+      - ./rmq/logs:/opt/logs
+      - ./rmq/store:/opt/store
       - ./rmq/brokerconf/broker.conf:/etc/rocketmq/broker.conf
     environment:
       JAVA_OPT_EXT: "-Duser.home=/opt -Xms512M -Xmx512M -Xmn128m"
@@ -116,6 +144,9 @@ services:
       - dubbo.config-center.address=zookeeper://zk1:2181?backup=zk2:2181,zk3:2181
       - dubbo.metadata-report.address=zookeeper://zk1:2181?backup=zk2:2181,zk3:2181
       - jasypt.encryptor.password=123456
+      - rocketmq.name-server=rmqnamesrv:9876
+      - spring.redis.host=redis
+      - spring.datasource.url=jdbc:mysql://mysqldb:3306/dictdb?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
       - JAVA_OPTS=-Dcsp.sentinel.dashboard.server=sentinel-dashboard:8280 -Dproject.name=sentinel-dubbo-quickstart
     depends_on:
       - zk1
