--- a/docker-compose/rmq/brokerconf/broker.conf
+++ b/docker-compose/rmq/brokerconf/broker.conf
@@ -29,14 +29,13 @@ brokerId=0
 
 #启动IP,如果 docker 报 com.alibaba.rocketmq.remoting.exception.RemotingConnectException: connect to <192.168.0.120:10909> failed
 # 解决方式1 加上一句producer.setVipChannelEnabled(false);，解决方式2 brokerIP1 设置宿主机IP，不要使用docker 内部IP
-brokerIP1=172.23.141.92
+#brokerIP1=172.23.141.92
 
 #在发送消息时，自动创建服务器不存在的topic，默认创建的队列数
 defaultTopicQueueNums=4
 
 #是否允许 Broker 自动创建Topic，建议线下开启，线上关闭 ！！！这里仔细看是false，false，false
-#原因下篇博客见~ 哈哈哈哈
-autoCreateTopicEnable=true
+autoCreateTopicEnable=false
 
 #是否允许 Broker 自动创建订阅组，建议线下开启，线上关闭
 autoCreateSubscriptionGroup=true
