--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -38,7 +38,7 @@ services:
       - dubbo-net
 
   mysqldb:
-    image: mysql:5.7
+    image: rookiefly/mysql:latest
     container_name: mysql
     volumes:
       - ./mysql-data:/var/lib/mysql
@@ -140,13 +140,7 @@ services:
     networks:
       - dubbo-net
     environment:
-      - dubbo.registry.address=zookeeper://zk1:2181?backup=zk2:2181,zk3:2181
-      - dubbo.config-center.address=zookeeper://zk1:2181?backup=zk2:2181,zk3:2181
-      - dubbo.metadata-report.address=zookeeper://zk1:2181?backup=zk2:2181,zk3:2181
       - jasypt.encryptor.password=123456
-      - rocketmq.name-server=rmqnamesrv:9876
-      - spring.redis.host=redis
-      - spring.datasource.url=jdbc:mysql://mysqldb:3306/dictdb?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
       - JAVA_OPTS=-Dcsp.sentinel.dashboard.server=sentinel-dashboard:8280 -Dproject.name=sentinel-dubbo-quickstart
     depends_on:
       - zk1
@@ -154,6 +148,10 @@ services:
       - zk3
       - dubbo-admin
       - sentinel-dashboard
+      - redis
+      - mysqldb
+      - rmqbroker
+      - rmqnamesrv
 
 networks:
   dubbo-net:
