fix docker compose

--- a/docker/conf/application.properties
+++ b/docker/conf/application.properties
@@ -50,9 +50,9 @@ pagehelper.default-count=false
 # Dubbo config
 dubbo.scan.base-packages=com.rookiefly.quickstart.dubbo.remote.impl
 dubbo.application.name=${spring.application.name}
-dubbo.registry.address=zookeeper://zk1:2181?backup=zk2:2181,zk3:2181
-dubbo.config-center.address=zookeeper://zk1:2181?backup=zk2:2181,zk3:2181
-dubbo.metadata-report.address=zookeeper://zk1:2181?backup=zk2:2181,zk3:2181
+dubbo.registry.address=zookeeper://zk1:2181
+dubbo.config-center.address=zookeeper://zk1:2181
+dubbo.metadata-report.address=zookeeper://zk1:2181
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=20880
 dubbo.application.qosEnable=true
@@ -73,7 +73,7 @@ swagger.show=true
 #rocketmq config
 rocketmq.name-server=rmqnamesrv:9876
 rocketmq.producer.group=dubbo-quickstart-group
-com.rocketmq.sendMessageWithVIPChannel=true
+com.rocketmq.sendMessageWithVIPChannel=false
 rocketmq.sms.topic=sms-topic
 # redis config
 # Redis数据库索引（默认为0）
