--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,9 +51,9 @@ pagehelper.default-count=false
 dubbo.scan.base-packages=com.rookiefly.quickstart.dubbo.remote.impl
 dubbo.application.name=${spring.application.name}
 dubbo.registry.address=N/A
-#dubbo.registry.address=zookeeper://127.0.0.1:2181?backup=127.0.0.1:2182,127.0.0.1:2183
-#dubbo.config-center.address=zookeeper://127.0.0.1:2181?backup=127.0.0.1:2182,127.0.0.1:2183
-#dubbo.metadata-report.address=zookeeper://127.0.0.1:2181?backup=127.0.0.1:2182,127.0.0.1:2183
+#dubbo.registry.address=zookeeper://127.0.0.1:2181
+#dubbo.config-center.address=zookeeper://127.0.0.1:2181
+#dubbo.metadata-report.address=zookeeper://127.0.0.1:2181
 #dubbo.protocol.name=dubbo
 #dubbo.protocol.port=20880
 #dubbo.application.qosEnable=true
@@ -74,7 +74,7 @@ swagger.show=true
 #rocketmq config
 rocketmq.name-server=127.0.0.1:9876
 rocketmq.producer.group=dubbo-quickstart-group
-com.rocketmq.sendMessageWithVIPChannel=true
+com.rocketmq.sendMessageWithVIPChannel=false
 rocketmq.sms.topic=sms-topic
 # redis config
 # Redis数据库索引（默认为0）
