--- a/docker/conf/application.properties
+++ b/docker/conf/application.properties
@@ -42,7 +42,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.cache.cache-names=dictCache
 spring.cache.caffeine.spec=maximumSize=500,expireAfterAccess=600s
 # mybatis config
-#mybatis.type-aliases-package=com.rookiefly.quickstart.dubbo.dao
+#mybatis.type-aliases-package=com.rookiefly.quickstart.dubbo.model
 #mybatis.configuration.default-fetch-size=100
 #mybatis.configuration.default-statement-timeout=30
 mybatis.config-location=classpath:mybatis-config.xml
