--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -11,3 +11,6 @@ collation-server=utf8_general_ci
 init-connect='SET NAMES utf8'
 init_connect='SET collation_connection = utf8_general_ci'
 skip-character-set-client-handshake
+log-bin=mysql-bin
+binlog-format=ROW
+server_id=1
