--- a/docker/conf/application.properties
+++ b/docker/conf/application.properties
@@ -1,3 +1,4 @@
+spring.profiles.active=dev
 server.port=8787
 spring.application.name=dubbo-quickstart
 server.tomcat.accesslog.buffered=true
@@ -69,9 +70,9 @@ management.endpoint.dubboproperties.enabled=true
 jasypt.encryptor.algorithm=PBEWITHHMACSHA512ANDAES_256
 jasypt.encryptor.ivGeneratorClassname=org.jasypt.iv.RandomIvGenerator
 # swagger开关
-swagger.show=true
+swagger.swagger-open=true
 #rocketmq config
-rocketmq.name-server=rmqnamesrv:9876
+rocketmq.name-server=namesrv:9876
 rocketmq.producer.group=dubbo-quickstart-group
 com.rocketmq.sendMessageWithVIPChannel=false
 rocketmq.sms.topic=sms-topic
