add dubbo api docs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.profiles.active=@spring.active@
 server.port=8787
 spring.application.name=dubbo-quickstart
 server.tomcat.accesslog.buffered=true
@@ -70,7 +71,7 @@ management.endpoint.dubboproperties.enabled=true
 jasypt.encryptor.algorithm=PBEWITHHMACSHA512ANDAES_256
 jasypt.encryptor.ivGeneratorClassname=org.jasypt.iv.RandomIvGenerator
 # swagger开关
-swagger.show=true
+swagger.swagger-open=true
 #rocketmq config
 rocketmq.name-server=127.0.0.1:9876
 rocketmq.producer.group=dubbo-quickstart-group
