--- a/pom.xml
+++ b/pom.xml
@@ -242,15 +242,15 @@
             <resource>
                 <directory>src/main/resources</directory>
                 <excludes>
-                    <exclude>application*.properties</exclude>
+                    <exclude>application.yml</exclude>
                 </excludes>
             </resource>
             <resource>
                 <directory>src/main/resources</directory>
                 <filtering>true</filtering>
                 <includes>
-                    <include>application.properties</include>
-                    <include>application-${spring.active}.properties</include>
+                    <include>application.yml</include>
+                    <include>application-${spring.active}.yml</include>
                 </includes>
             </resource>
         </resources>
@@ -341,9 +341,9 @@
             </properties>
         </profile>
         <profile>
-            <id>produce</id>
+            <id>prod</id>
             <properties>
-                <spring.active>produce</spring.active>
+                <spring.active>prod</spring.active>
             </properties>
         </profile>
     </profiles>
