add dubbo monitor

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,6 +5,8 @@ dubbo:
     address: zookeeper://localhost:2181
   metadata-report:
     address: zookeeper://localhost:2181
+  monitor:
+    protocol: registry
 spring:
   datasource:
     initialization-mode: ALWAYS
