--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,8 @@
     <properties>
         <java.version>1.8</java.version>
         <spring-boot.version>2.3.6.RELEASE</spring-boot.version>
-        <dubbo.version>2.7.9</dubbo.version>
+        <dubbo.version>2.7.11</dubbo.version>
         <skywalking.version>8.2.0</skywalking.version>
-        <soul.version>2.3.0-SNAPSHOT</soul.version>
         <sentinel.version>1.8.0</sentinel.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
@@ -306,7 +305,7 @@
             <plugin>
                 <groupId>com.github.shalousun</groupId>
                 <artifactId>smart-doc-maven-plugin</artifactId>
-                <version>2.1.0</version>
+                <version>2.1.7</version>
                 <configuration>
                     <!--指定生成文档的使用的配置文件-->
                     <configFile>./src/main/resources/smart-doc.json</configFile>
@@ -315,7 +314,10 @@
                 </configuration>
                 <executions>
                     <execution>
+                        <!--如果不需要在执行编译时启动smart-doc，则将phase注释掉-->
+                        <phase>compile</phase>
                         <goals>
+                            <!--smart-doc提供了html、openapi、markdown等goal，可按需配置-->
                             <goal>html</goal>
                         </goals>
                     </execution>
