--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,17 +29,11 @@ spring:
     redis:
       time-to-live: 60s
       cache-null-values: true
-  datasource:
-    hikari:
-      connectionTimeout: 30000
-      idleTimeout: 30000
-      maxLifetime: 2000000
-      maximumPoolSize: 20
-      poolName: dictHikariCP
   profiles:
     active: @spring.active@
   session:
     store-type: redis
+    timeout: 1H
   jackson:
     # 设置属性命名策略,对应jackson下PropertyNamingStrategy中的常量值，SNAKE_CASE-返回的json驼峰式转下划线，json body下划线传到后端自动转驼峰式
     property-naming-strategy: SNAKE_CASE
